# Egret-Physics

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  NOTICE  README.md
dependency/include/magic_enum_0.9.8/magic_enum/: magic_enum_all.hpp
docs/: PhysicsModel_InheritanceChain.drawio  class_derive.drawio  collide_problem.txt  structure.drawio  基于 GJK 和 CCD 的凸体动态碰撞检测算法.md
doxygen/: Doxyfile  egret_style.css  footer.html  header.html
resources/: app.rc  global.qrc
resources/assets/favicon/: process.py
resources/assets/icons/: REAMDE.md
resources/assets/model_3d/circle_disk/: circle.mesh
resources/assets/model_3d/cylinder_side/: cylinder_side.mesh
resources/assets/model_3d/disk/: disk.mesh
resources/assets/model_3d/torus/mesh/: torus_R0_1.mesh  torus_R1.mesh  torus_R10.mesh  torus_R100.mesh  torus_R1000.mesh  torus_R10000.mesh
resources/assets/model_3d/torus/mesh_init/torus_R0_1/: Torus_R0_1.qml
resources/assets/model_3d/torus/mesh_init/torus_R1/: Torus_R1.qml
resources/assets/model_3d/torus/mesh_init/torus_R10/: Torus_R10.qml
resources/assets/model_3d/torus/mesh_init/torus_R100/: Torus_R100.qml
resources/assets/model_3d/torus/mesh_init/torus_R1000/: Torus_R1000.qml
resources/assets/model_3d/torus/mesh_init/torus_R10000/: Torus_R10000.qml
src/: main.cpp
src/model/physics/: physics_abstract.cpp  physics_abstract.h  physics_utils.h
src/model/physics/constraints/: connecting_line.cpp  connecting_line.h  connecting_rod.cpp  connecting_rod.h  constraints_base.cpp  constraints_base.h  simple_pendulum.cpp  simple_pendulum.h  sliding_rail.cpp  sliding_rail.h  support_surface.cpp  support_surface.h
src/model/physics/field/: field_base.cpp  field_base.h  gravitational_field.cpp  gravitational_field.h  gravity_field.cpp  gravity_field.h
src/model/physics/rigid/: particle.cpp  particle.h  physical_entity.cpp  physical_entity.h  rigid_body.cpp  rigid_body.h
src/model/physics/rigid/shape/: shape_base.cpp  shape_base.h  shape_box.cpp  shape_box.h  shape_cube.cpp  shape_cube.h  shape_cylinder.cpp  shape_cylinder.h  shape_cylindrical_shell.cpp  shape_cylindrical_shell.h  shape_disk.cpp  shape_disk.h  shape_ring.cpp  shape_ring.h  shape_rod.cpp  shape_rod.h  shape_sphere.cpp  shape_sphere.h  shape_spherical_shell.cpp  shape_spherical_shell.h
src/model/physics/rigid/shape/register/: ccd_register_dummy.cpp  shape_factory_registry.cpp  shape_factory_registry.h  shape_register.cpp  shape_register.h  standard_register_dummy.cpp  standard_shape_factory_registration.cpp
src/model/physics/rigid/shape/standard/: shape_base.cpp  shape_base.h  shape_box.cpp  shape_box.h  shape_cylinder.cpp  shape_cylinder.h  shape_cylindrical_shell.cpp  shape_cylindrical_shell.h  shape_disk.cpp  shape_disk.h  shape_ring.cpp  shape_ring.h  shape_rod.cpp  shape_rod.h  shape_sphere.cpp  shape_sphere.h  shape_spherical_shell.cpp  shape_spherical_shell.h
src/model/physics/rigid/shape/standard/collide_judge/: ccd_collide_judge_group.cpp  ccd_collide_judge_group.h  standard_collide_judge_group.cpp  standard_collide_judge_group.h
src/model/qt/: scene_manager.h
src/model/scene/: world_scene_manager.cpp  world_scene_manager.h
src/model/solver/: solver.cpp  solver.h  solver_scene_snapshot.h  solver_types.h
src/model/strategy/broad_phase_strategy/: broad_phase_strategy.h  brute_force_broad_phase.h  implementation.cpp
src/model/strategy/contact_strategy/: contact_resolver_strategy.h  frictionless_contact_resolver.h  implementation.cpp
src/model/strategy/integrator_strategy/: implementation.cpp  integrator_strategy.h  semi_implicit_euler_integrator.h
src/qml/: qml.qrc
src/qml/components/: AboutDialog.qml  Coordinate.qml  DeepBlueTheme.qml  EgretMenuBar.qml  FloatField.qml  GlassPanel.qml  LeftNavPanel.qml  MetricCard.qml
src/qml/components/basic/: EgretPushButton.qml  EgretSeparator.qml
src/qml/components/theme/: DeepBlueTheme.qml
src/qml/main/: MainWindow.qml
src/qml/scene/: Coordinate.qml
src/qml/units/: EditorUnit.qml  SimulatorUnit.qml
src/utils/: basic_utils.h  constants.h  egret_version.h  geometry.h  transform.cpp  transform.h  uuid_generator.cpp  uuid_generator.h
src/utils/io/: database_controller.cpp  database_controller.h  json_controller.cpp  json_controller.h  logger.cpp  logger.h  qdebug_handler.cpp  qdebug_handler.h
src/utils/language/: cpp_property.cpp
src/utils/os/windows/: windows_config.cpp  windows_config.h
src/view/: coordinate.cpp  coordinate.h  enum_handler.cpp  enum_handler.h  file_handler.cpp  file_handler.h  qt_component_helper.cpp  qt_component_helper.h  resource_helper.cpp  resource_helper.h
src/view_model/: scene_body_model.cpp  scene_body_model.h  scene_manager.cpp
src/view_model/editor/: model_manager.cpp  model_manager.h
src/view_model/qt/: scene_body_model.cpp  scene_body_model.h  scene_manager.cpp  scene_manager.h
src/view_model/serialize/: model_item_data.cpp  model_item_data.h  model_to_render_helper.cpp  model_to_render_helper.h  transform_transformer.cpp  transform_transformer.h
src/view_model/simulator/: scene_body_model.cpp  scene_body_model.h  scene_manager.cpp  scene_manager.h
tests/: boost_test_dependency.h  test_ccd.cpp  test_collision.cpp
tools/: generate_circle.py  generate_cylinder.py  generate_torus.py
